--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 											</li>
 											<li>
 												<p><label>Email:</label><span><a
-															href="mailto:shamlipachpande44@gmail.com">shamlipachpande44@gmail.com</a></span>
+															href="mailto:shamlipachpande44@gmail.com">shamalipachpande44@gmail.com</a></span>
 												</p>
 											</li>
 											<li>
